--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     	<meta charset="utf-8">
-    	<meta name="keywords" content="cookies, c, monster, Sesame Street">
-    	<meta name="description" content="I love cookies big and small, I love cookies I love them all.">
+    	<meta name="keywords" content="sonic, hedgehog, Sega, speed">
+    	<meta name="description" content="I'm Sonic the Hedgehog, Sega's iconic game character.">
 
 		<title>Sonic the Hedgehog</title>
 		
