--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     	<meta name="description" content="I'm Sonic the Hedgehog, Sega's iconic game character.">
 
 		<title>Sonic the Hedgehog</title>
-		
+	
+		<link rel = "icon" href =  
+	"https://image.flaticon.com/icons/svg/588/588253.svg" 
+	        type = "image/x-icon"> 
+	
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
